# RsGrillComanda

./: .taurignore  Cargo.toml  backups.scss  comandas.scss  configs.scss  header.scss  index.html  mixins.scss  rustfmt.toml  stock.scss  styles.scss
src/: app.rs  backups.rs  comand.rs  configs.rs  errors.rs  header.rs  infra.rs  invoke.rs  main.rs  mainpage.rs  payment.rs  reducer.rs  shared.rs  sort_dates.rs  stock.rs  stock_state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: export.rs  macros.rs  main.rs
src/components/: input_auto.rs  select.rs
