[package]
name = "rsgrill-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlSelectElement",
    "ScrollIntoViewOptions",
    "ScrollBehavior",
    "ScrollLogicalPosition",
] }
js-sys = "0.3"
serde_json = "1.0.95"
gloo-timers = "0.2.6"
[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "shared"
path = "src/shared.rs"


[workspace]
members = ["src-tauri"]
