[package]
name = "rsgrill"
version = "0.0.0"
description = "Um sistema de comanda feito para o Rs Grill"
authors = ["Gabireu Gabiru"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-confirm", "dialog-message", "dialog-save", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rsgrill-ui = { path = "../" }
xlsxwriter = "0.5.0"
home = "0.5.4"
sysinfo = "0.28.4"
chrono = "0.4.24"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
